--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.2",
@@ -37,6 +37,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
