--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/(tabs)/_layout.js", "app/(tabs)/explore.js", "app/(tabs)/index.js", "app/_layout.js", "app/+html.js", "app/+not-found.js", "components/Collapsible.tsx"  ]
+, "app/(tabs)/_layout.js", "app/(tabs)/explore.js", "app/(tabs)/index.js", "app/_layout.js", "app/+html.tsx", "app/+not-found.js", "components/Collapsible.tsx"  ]
 }
