search bar functionality now works.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
+        "extra": {
+      "googleClientId": "390648558615-cqs5aebnefhs6b54ccgu3hbqln15amj2.apps.googleusercontent.com"
+    },
     "name": "test",
     "slug": "test",
     "version": "1.0.0",
@@ -16,6 +19,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.mentalhealthjournal.test",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
