--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.17.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-google-signin/google-signin": "^13.0.1",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
@@ -35,6 +36,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -42,11 +44,13 @@
     "react-native-paper": "^5.12.5",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-video": "^6.5.0",
+    "react-native-web": "~0.19.10",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
