--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,37 +15,36 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "8.0.9",
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.17.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/storage": "^20.5.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^20.5.0",
     "@react-native-google-signin/google-signin": "^13.0.1",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.14",
+    "expo": "~51.0.34",
     "expo-auth-session": "~5.5.2",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
-    "expo-google-app-auth": "^10.0.0",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-random": "~14.0.1",
     "expo-router": "~3.5.16",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.12.5",
-    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -58,10 +57,9 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
