--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,25 +1,10 @@
-#spring.application.name=demo
-#spring.datasource.url=jdbc:mysql://localhost:3306/journal_app
-#spring.datasource.username=root
-#spring.datasource.password=testpassword
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=validate
-##spring.autoconfigure.exclude=org.springframework.cloud.gcp.autoconfigure.firestore.GcpFirestoreAutoConfiguration
-#spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
-#spring.jackson.time-zone=UTC
-
-
 spring.application.name=demo
-spring.datasource.url=jdbc:mysql://journal-db.c5781v2xzx8l.us-east-2.rds.amazonaws.com:3306/journal_db
-spring.datasource.username=admin
-spring.datasource.password=k5H48dAqBwCKSQp
+spring.datasource.url=jdbc:mysql://localhost:3306/thoughtflow_journal_db
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
-
