--- a/Frontend/eas.json
+++ b/Frontend/eas.json
@@ -13,8 +13,8 @@
     },
     "production": {
       "env": {
-        "EXPO_PUBLIC_GOOGLE_API_KEY": "AIzaSyAfc1XrW9e-AUsnsiiQWRnotQ4X96js45o",
-        "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyCT1LCcHvYDsgtyHkg4S-YMRI-OoDANjco"
+        "EXPO_PUBLIC_GOOGLE_API_KEY": {YOURAPIKEY},
+        "EXPO_PUBLIC_FIREBASE_API_KEY": {YOURAPIKEY}
       },
       "autoIncrement": true
       
